--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
-DATABASE=publications
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=database
+POSTGRES_DATABASE=publications
